--- a/src/libs/Makefile.d_fat
+++ b/src/libs/Makefile.d_fat
@@ -41,28 +41,13 @@ hdspm_mixer: hdspm_mixer-locinstall
 hdspm_mixer-clean:
 
 
-
-######## ACONNECT ################
-
-aconnect-build:
-	make -C aconnect
-
-aconnect-locinstall: aconnect-build
-	cp aconnect/*.$(EXT) aconnect/aconnects.pd $(LOCINSTALL_DIR)
-
-aconnect: aconnect-locinstall
-
-aconnect-clean:
-	make -C aconnect clean
-
 ######### hcs's folder_list ###############
 
 folder_list/folder_list.c: hcs/folder_list.c
 	cp hcs/folder_list.c folder_list/folder_list.c
 
 folder_list-build: folder_list/folder_list.c
-	PDSOURCE=$(PDSOURCE) make -C folder_list -f ../Makefile.subdir
-#	$(CC) -DPD -O2 -funroll-loops -fomit-frame-pointer -fPIC -I$(PDSOURCE) -export_dynamic -shared -lc -lm -o folder_list/folder_list.$(EXT) folder_list/folder_list.c
+	PDSOURCE=$(PDSOURCE) make -C folder_list -f ../Makefile.subdir $(EXT)
 
 folder_list-locinstall: folder_list-build
 	cp folder_list/folder_list.$(EXT) $(LOCINSTALL_DIR)
@@ -88,7 +73,7 @@ iem_ambi-clean:
 ######### IEM AMBI2 ###############
 
 iem_ambi2-build: 
-	make -C iem_ambi2/src -f makefile_linux
+	make -C iem_ambi2/src -f makefile_d_fat
 
 iem_ambi2-locinstall: iem_ambi2-build
 	cp iem_ambi2/src/iem_ambi2.$(EXT) $(LOCINSTALL_DIR)
@@ -96,7 +81,7 @@ iem_ambi2-locinstall: iem_ambi2-build
 iem_ambi2: iem_ambi2-locinstall
 
 iem_ambi2-clean:
-	make -C iem_ambi2/src -f makefile_linux clean
+	make -C iem_ambi2/src -f makefile_d_fat clean
 
 
 ######### IEM BIN AMBI ###############
@@ -235,7 +220,7 @@ net: net-locinstall
 ######## ZEXY ##################
 
 zexy-build: 
-	make -C zexy/src
+	CONFIGUREFLAGS="--with-pd=$(PDSOURCE)/.." make -C zexy/src 
 
 zexy-locinstall: zexy-build
 	cp zexy/*.$(EXT) $(LOCINSTALL_DIR)
@@ -249,11 +234,11 @@ zexy: zexy-locinstall
 
 sources: folder_list-src
 
-build: aconnect-build folder_list-build iem_ambi-build iem_ambi2-build iem_bin_ambi-build iemgui-build iemlib-build iemmatrix-build iem_spec2-build miXed-build net-build osc-build popup-build zexy-build
+build: folder_list-build iem_ambi-build iem_ambi2-build iem_bin_ambi-build iemgui-build iemlib-build iemmatrix-build iem_spec2-build miXed-build net-build osc-build popup-build zexy-build
 
-locinstall: aconnect-locinstall folder_list-locinstall iem_ambi-locinstall iem_ambi2-locinstall iem_bin_ambi-locinstall iemgui-locinstall iemlib-locinstall iemmatrix-locinstall iem_spec2-locinstall miXed-locinstall net-locinstall osc-locinstall popup-locinstall zexy-locinstall
+locinstall: folder_list-locinstall iem_ambi-locinstall iem_ambi2-locinstall iem_bin_ambi-locinstall iemgui-locinstall iemlib-locinstall iemmatrix-locinstall iem_spec2-locinstall miXed-locinstall net-locinstall osc-locinstall popup-locinstall zexy-locinstall
 
-clean: aconnect-clean folder_list-clean iem_ambi-clean iem_ambi2-clean iem_bin_ambi-clean iemgui-clean iemlib-clean iemmatrix-clean iem_spec2-clean miXed-clean net-clean osc-clean popup-clean zexy-clean
+clean: folder_list-clean iem_ambi-clean iem_ambi2-clean iem_bin_ambi-clean iemgui-clean iemlib-clean iemmatrix-clean iem_spec2-clean miXed-clean net-clean osc-clean popup-clean zexy-clean
 	rm -f sf-login
 
 distclean: clean
