fixed some bugs if source is not in /usr/local/src/pd/src or in system includes please note that iem_ambi, iem_matrix has to be patched, zexy needs additionel CONFIGURATIONFLAGS

--- a/src/libs/Makefile
+++ b/src/libs/Makefile
@@ -49,7 +49,7 @@ hdspm_mixer-clean:
 ######## ACONNECT ################
 
 aconnect-build:
-	make -C aconnect
+	make -C aconnect INLCUDES="-I$(PDSOURCE)"
 
 aconnect-locinstall: aconnect-build
 	cp aconnect/*.$(EXT) aconnect/aconnects.pd $(LOCINSTALL_DIR)
@@ -260,7 +260,7 @@ net: net-locinstall
 ######## ZEXY ##################
 
 zexy-build: 
-	make -C zexy/src
+	make -C zexy/src CONFIGUREFLAGS="--includedir=/home/wini/CUBEmixer/src/pd/src"
 
 zexy-locinstall: zexy-build
 	cp zexy/*.$(EXT) $(LOCINSTALL_DIR)
